# altcha-nginx-module

./: Cargo.toml  README.md  build.rs
challenge-page/: index.html  package-lock.json  package.json  vite.config.ts
challenge-page/src/: App.tsx
example/: challenge.html  nginx.conf
src/: lib.rs
